--- a/src/app/header/style.css
+++ b/src/app/header/style.css
@@ -28,7 +28,7 @@
   text-align: left;
   font-weight: bold;
 }
-.lorem-text-layout {
+/* .lorem-text-layout {
   width: 630px;
   height: 48px;
   top: 945px;
@@ -42,4 +42,51 @@
   line-height: 24px;
   letter-spacing: 0em;
   text-align: center;
+} */
+.lorem-text {
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 24px */
+  text-transform: capitalize;
+}
+@media  (max-width: 480px) {
+  .header-bg-img {
+    width: 100%;
+    height: 232px;
+  }
+  .header-bg-logo {
+    margin-top: -50px;   
+    width: 102px;
+    height: 102px;
+  }
+  .header-logo {
+    width:95px;
+    height: 95px;
+    margin-top: -98px;
+  }
+  .logo-text-layout {
+    width: 150px;
+    height: 18px;
+    margin-top: 20px;
+  }
+  .logo-text {
+    font-family: Abel;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;   
+  }
+  .lorem-text {
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: center;    
+}
 }
