--- a/src/app/product/style.css
+++ b/src/app/product/style.css
@@ -1,5 +1,4 @@
 
- 
 .product-logo {
     font-family: Abel;
     font-size: 40px;
@@ -74,52 +73,15 @@
    height: 30px;
   }
   
-  @media (max-width: 320px){
-    .product-logo {
-      font-family: Kaushan Script;
-      font-size: 23px;
-      font-weight: 400;
-      line-height: 24px;
-      letter-spacing: 0em;
-      margin-top: 30px;
-    }
-    .child-1 {
-      width: 305px;
-      height: 296px;
-      top: 856px;
-      left: 20px;
-      border-radius: 10px, 10px, 0px, 0px;
-    }
-    .product-card-text {
-      font-family: Poppins;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 16px;
-      letter-spacing: 0em;
-      text-align: left;
-    }
-    .product-card-rs{
-      margin-left: -180px;
-    }
-    .product-btn{
-      margin-top: -50px;
-    }
-    .rupee-icon {
-      width: 24px;
-      height: 24px;
-      top: 1188px;
-      left: 30px;
-    }
-    .rupee-icon{
-      margin-left: -130px;
-    }
-    .product-card-rs {
-      font-family: Poppins;
-      font-size: 20px;
-      font-weight: 600;
-      line-height: 20px;
-      letter-spacing: 0em;
-      text-align: left;
-    }
-   
+  @media  (max-width: 480px){
+.product-logo {
+  font-family: Abel;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 40px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 65px;
+}
   }
+     
