--- a/src/app/product/style.css
+++ b/src/app/product/style.css
@@ -132,6 +132,8 @@
   .button- {
     width: 25px;
     height: 25px;
+    position: absolute;
+    margin-left: 50px;
     margin-top: -130px;
     border-radius: 50px;
     background-color: #ffffff;
