--- a/src/app/from/style.css
+++ b/src/app/from/style.css
@@ -26,9 +26,9 @@
   color: #fff;  
 }
 .last-from{
-  padding: 80px;
-  height: 250px;
-  background-color: #ffffff;
+  padding: 60px;
+  height: 340px;
+  background-color:  #fff;
 }
 .empty-box{
   height: 50px;
